# TinyEngine

./: CmakeLists.txt
code_generator/: .gitignore  CMakeLists.txt
code_generator/include/: codegen.h  conv2d.h  profiler.h
code_generator/model/: generate_cpp.cpp  generator.cpp  model_info.txt
code_generator/model/include/: gen_code.h
code_generator/model/src/: conv_2d_kernel1x1_stride1.cpp  conv_2d_kernel3x3_stride2.cpp  depthwise_conv_2d_kernel3x3_stride1.cpp  depthwise_conv_2d_kernel3x3_stride2.cpp
code_generator/src/: codegen.cpp  config_m.py  create_model.py  main.cpp  parse_model.cpp  print_m_cpp  profiler.cpp  read_m.cpp  test_model.py
code_generator/test/: .gitignore  CMakeLists.txt  code_generator.cpp  main.cpp  sample_code.cpp  test.cpp  test2.cpp  test3.cpp  validator.cpp
code_generator/test/include/: code_generator.h  engine.h  validator.h
include/: client.h  clientmanager.h  cnn.h  engine.h  mlp.h  nn.h
src/: client.cpp  clientManager.cpp  cnn.cpp  cnn2.cpp  main.cpp  mlp.cpp
